[package]
name = "masync"
version = "0.1.0"
authors = ["Sebastian <thesicrs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7"
futures = "0.3"
model = { path = "model" }
policy = { path = "policy" }